Fixed a bug where having only 1 search result and 0 would cause jumping because of incorrect height properties.

--- a/src/css/MainPage.scss
+++ b/src/css/MainPage.scss
@@ -86,6 +86,7 @@ a {
     background-color: rgba(64, 63, 63, 0.69);
     @extend %border;
     padding: 1em;
+    min-height: 58vh;
 }
 .champion-card {
     @extend %flex-prop;
@@ -146,12 +147,12 @@ a {
     @extend %flex-prop;
     display: none;
     width: 100%;
-    height: 29em;
+    height: 40vh;
     margin: 3em;
 }
 #no-results {
     @extend %flex-prop;
-    width: 50em;
+    width: 45%;
     height: inherit;
     background-color: #313131;
     border: $pink 1px solid;
